@@ -43,6 +43,7 @@
 #endif     // SOLARIS
 #include <X11/cursorfont.h>
 #include <X11/Xmu/WinUtil.h>
+#include <X11/Xatom.h>
 
 #ifdef USE_XDAMAGE
 #include <X11/extensions/Xfixes.h>
@@ -296,6 +297,117 @@ warning_submit ()
 #endif     // DEBUG
 #undef DEBUGFUNCTION
 }
+
+
+/**
+ * \brief retrieves the main controls window's extent rectangle. This is needed
+ *      because of bug # 524110 in gdk_window_get_frame_extents.
+ *      The code below is partly taken from the suggested fix for the bug.
+ */
+void
+xvc_get_ctrl_frame_extents (GdkWindow * window, GdkRectangle * rect)
+{
+#define DEBUGFUNCTION "get_frame_extents()"
+    XVC_AppData *app = xvc_appdata_ptr ();
+    Window xwindow;
+    Atom type_return;
+    gint format_return;
+    gulong nitems_return;
+    gulong bytes_after_return;
+    guchar *data;
+    gboolean got_frame_extents = FALSE;
+    Window root;
+    guint ww, wh, wb, wd;
+    gint wx, wy;
+
+    xwindow = GDK_WINDOW_XID (window);
+
+    Window *wm_child = NULL;
+    Atom nwm_atom, utf8_string, wm_name_atom, rt;
+    unsigned long nbytes, nitems;
+    char *wm_name_str = NULL;
+    int fmt;
+
+    utf8_string = XInternAtom (app->dpy, "UTF8_STRING", False);
+
+    nwm_atom = XInternAtom (app->dpy, "_NET_SUPPORTING_WM_CHECK", True);
+    wm_name_atom = XInternAtom (app->dpy, "_NET_WM_NAME", True);
+
+    if (nwm_atom != None && wm_name_atom != None) {
+        if (XGetWindowProperty (app->dpy, app->root_window,
+                                nwm_atom, 0, 100,
+                                False, XA_WINDOW,
+                                &rt, &fmt, &nitems, &nbytes,
+                                (unsigned char **) ((void *)
+                                                    &wm_child))
+            != Success) {
+            fprintf (stderr,
+                     "%s %s: Error while trying to get a window to identify the window manager.\n",
+                     DEBUGFILE, DEBUGFUNCTION);
+        }
+        if ((wm_child == NULL) ||
+            (XGetWindowProperty
+             (app->dpy, *wm_child, wm_name_atom, 0, 100, False,
+              utf8_string, &rt, &fmt, &nitems, &nbytes,
+              (unsigned char **) ((void *)
+                                  &wm_name_str))
+             != Success)) {
+            fprintf (stderr,
+                     "%s %s: Warning!!!\nYour window manager appears to be non-compliant!\n",
+                     DEBUGFILE, DEBUGFUNCTION);
+        }
+    }
+    // Right now only wm's that I know of performing 3d compositing
+    // are beryl and compiz. names can be compiz for compiz and
+    // beryl/beryl-co/beryl-core for beryl (so it's strncmp )
+    if (wm_name_str && (!strcmp (wm_name_str, "compiz") ||
+                        !strncmp (wm_name_str, "beryl", 5))) {
+
+        /* first try: use _NET_FRAME_EXTENTS */
+        if (XGetWindowProperty (app->dpy, xwindow,
+                                XInternAtom (app->dpy,
+                                             "_NET_FRAME_EXTENTS", TRUE),
+                                0, G_MAXLONG, False, XA_CARDINAL, &type_return,
+                                &format_return, &nitems_return,
+                                &bytes_after_return, &data)
+            == Success) {
+
+            if ((type_return == XA_CARDINAL) && (format_return == 32) &&
+                (nitems_return == 4) && (data)) {
+                guint32 *ldata = (guint32 *) data;
+
+                got_frame_extents = TRUE;
+
+                /* try to get the real client window geometry */
+                if (XGetGeometry (app->dpy, xwindow,
+                                  &root, &wx, &wy, &ww, &wh, &wb, &wd)) {
+                    rect->x = wx;
+                    rect->y = wy;
+                    rect->width = ww;
+                    rect->height = wh;
+                }
+
+                /* _NET_FRAME_EXTENTS format is left, right, top, bottom */
+                rect->x -= ldata[0];
+                rect->y -= ldata[2];
+                rect->width += ldata[0] + ldata[1];
+                rect->height += ldata[2] + ldata[3];
+            }
+
+            if (data)
+                XFree (data);
+        }
+
+        if (wm_name_str)
+            XFree (wm_name_str);
+    }
+
+    if (got_frame_extents == FALSE) {
+        gdk_window_get_frame_extents (window, rect);
+    }
+#undef DEBUGFUNCTION
+}
+
 
 #ifdef USE_FFMPEG
 /**
@@ -2826,18 +2938,21 @@ on_xvc_ctrl_lock_toggle_toggled (GtkToggleToolButton *
 {
 #define DEBUGFUNCTION "on_xvc_ctrl_lock_toggle_toggled()"
     GtkTooltips *tooltips;
-    XRectangle *frame_rectangle = NULL;
-    int x, y, pheight, pwidth;
 
     tooltips = gtk_tooltips_new ();
 
     if (gtk_toggle_tool_button_get_active (togglebutton)) {
+        XRectangle *frame_rectangle = NULL;
+        GdkRectangle ctrl_rect;
+        int x, y, height;
+        
         xvc_set_frame_locked (1);      /* button pressed = move frame with
                                         * control */
         gtk_tool_item_set_tooltip (GTK_TOOL_ITEM (togglebutton), tooltips,
                                    _("Detach selection frame"),
                                    _("Detach selection frame"));
 
+/*
         gtk_window_set_gravity (GTK_WINDOW (xvc_ctrl_main_window),
                                 GDK_GRAVITY_NORTH_WEST);
         gtk_window_get_position (GTK_WINDOW (xvc_ctrl_main_window), &x, &y);
@@ -2848,14 +2963,22 @@ on_xvc_ctrl_lock_toggle_toggled (GtkToggleToolButton *
         gtk_window_get_position (GTK_WINDOW (xvc_ctrl_main_window), &x, &y);
         gtk_window_get_size (GTK_WINDOW (xvc_ctrl_main_window), &pwidth,
                              &pheight);
+*/
+        xvc_get_ctrl_frame_extents(GDK_WINDOW(xvc_ctrl_main_window->window),
+                &ctrl_rect);
+        x = ctrl_rect.x;
+        y = ctrl_rect.y;
+        height = ctrl_rect.height;
+//        width = ctrl_rect.width;
+        
         if (x < 0)
             x = 0;
-        y += pheight + FRAME_OFFSET + FRAME_WIDTH;
+        y += height + FRAME_OFFSET + FRAME_WIDTH;
         if (y < 0)
             y = 0;
         frame_rectangle = xvc_get_capture_area ();
         xvc_change_gtk_frame (x, y, frame_rectangle->width,
-                              frame_rectangle->height, FALSE, TRUE);
+                              frame_rectangle->height, FALSE, FALSE);
     } else {
         xvc_set_frame_locked (0);
         gtk_tool_item_set_tooltip (GTK_TOOL_ITEM (togglebutton), tooltips,
